# fast-graphene

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
fast_graphene/: __init__.py  annot_compiler.py  builder.py  collectors.py  config.py  decorators.py  dependencies.py  errors.py  param.py  param_collector.py  types.py  utils.py
tests/: conftest.py  test_annot_compiler.py  test_builder.py  test_decorators.py  test_dependencies.py  test_dependency_channel.py  test_dependency_tree_visitor.py  test_param_collector.py
tests/fixtures/: builders.py  dependencies.py
