[tool.poetry]
name = "fast-graphene"
version = "0.1.0"
description = ""
authors = ["Your Name <maintain0404@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphene = { version = "^3.0.0*", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
black = "^21.7b0"
isort = "^5.9.3"

[tool.isort]
profile = "black"
src_paths = ["fast_graphene", "tests"]
multi_line_output = 3
force_alphabetical_sort_within_sections = true

[tool.black]
include = 'fast_graphene'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
